crates/runtime/tests/snapshots/object_load_field__field.snap
---
source: crates/runtime/tests/object_load_field.rs
expression: snapshot
---
# Input:
class T:
  a = 0
v := T(a=10)
print v.a


# Result (success):
none

# Stdout:
10

