crates/runtime/tests/snapshots/object_load_field__nested_opt.snap
---
source: crates/vm/tests/object_load_field.rs
expression: snapshot
---
# Input:
v := { a: { b: 10 } }
print ?v.a.b


# Result (success):
none

# Stdout:
10

