crates/runtime/tests/snapshots/object_load_field__nested_unknown_error.snap
---
source: crates/runtime/tests/object_load_field.rs
expression: snapshot
---
# Input:
class T:
  a = none
v := T()
print v.a.b


# Result (error):
In test_func at 0..0
Error: cannot get field `b` on value `none`


# Stdout:

