crates/runtime/tests/snapshots/object_load_field__nested_unknown_opt.snap
---
source: crates/runtime/tests/object_load_field.rs
expression: snapshot
---
# Input:
class T:
  a = none
v := T()
print ?v.a.b


# Result (success):
none

# Stdout:
none

