crates/runtime/tests/snapshots/object_load_field__unknown.snap
---
source: crates/vm/tests/object_load_field.rs
expression: snapshot
---
# Input:
v := {}
print v.a


# Result (error):
in [[main]]
[31merror[0m in code: cannot get field `"a"` on value `{}`


# Stdout:

