crates/runtime/tests/snapshots/object_load_field__unknown_opt.snap
---
source: crates/vm/tests/object_load_field.rs
expression: snapshot
---
# Input:
v := {}
print ?v.a


# Result (success):
none

# Stdout:
none

