crates/runtime/tests/snapshots/object_load_field__unknown_opt_then_error.snap
---
source: crates/runtime/tests/object_load_field.rs
expression: snapshot
---
# Input:
class T: pass
v := T()
print ?v.a
print v.a


# Result (error):
In test_func at 0..0
Error: cannot get field `a` on value `<class T>`


# Stdout:
none

